[Update]Header issue solved. Z-index of the header for user and guest were set to 2

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -372,19 +372,12 @@ input[type="submit"], input[type="button"] {
 	background-color: white;
 	color: black;
 }
-// .c {
-// 	width: 100%;
-// 	height: 100%;
-// 	position: relative;
-// 	backfround-color:black;
-// }
 #onCanvas {
 	// position: fixed;
 	// top: 0;
 }
- #nav {
+ #nav, #navnormal {
 	background-color: white;
-	opacity: 0.8;
 	z-index: 2;
 	//position: fixed;
 	width: 100%;
